Update memory config for tests